tests/qd/compile_errors/fallible_missing_if.qd
// Test: fallible function must be followed by if

fn safe_divide(a:i64 b:i64 -- result:i64)! {
	dup 0 eq if {
		drop drop
		0
		error
	} else {
		/
	}
}

fn main() {
	10 2 safe_divide
	// Missing 'if' here - should fail
	. nl
}
